register fully finished

--- a/public/index.html
+++ b/public/index.html
@@ -126,6 +126,7 @@
                             <input type="password" class="form-control" placeholder="Пароль" name="password" required>
                         </div>
                     </form>
+                    <div class="infoMessage">Нет сообщения</div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Закрыть</button>
@@ -155,6 +156,7 @@
                             <input type="password" class="form-control" placeholder="Пароль" name="password" required>
                         </div>
                     </form>
+                    <div class="infoMessage">Нет сообщения</div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Закрыть</button>
