--- a/public/index.html
+++ b/public/index.html
@@ -180,6 +180,7 @@
                             <input type="text" class="form-control" placeholder="Название" name="name" required>
                         </div>
                     </form>
+                    <div class="infoMessage">Нет сообщения</div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Закрыть</button>
@@ -213,6 +214,7 @@
                             <select name="account_id" id="income-accounts-list" class="form-control accounts-select" required></select>
                         </div>
                     </form>
+                    <div class="infoMessage">Нет сообщения</div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Закрыть</button>
@@ -247,6 +249,7 @@
                             <select name="account_id" id="expense-accounts-list" class="form-control accounts-select" required></select>
                         </div>
                     </form>
+                    <div class="infoMessage">Нет сообщения</div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Закрыть</button>
